tests/sksl/errors/ReservedNameSamplerCube.glsl
### Compilation failed:

error: 1: name 'samplerCube' is reserved
int samplerCube;
    ^^^^^^^^^^^
1 error
